
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[build-system]
requires = ["setuptools", "wheel", "versioneer"]

[versioneer]
VCS = git
style = pep440
versionfile_source = full_fred/_version.py
versionfile_build = full_fred/_version.py
tag_prefix = v
parentdir_prefix = full_fred-

